# acacia

./: CMakeLists.txt  README.md  acacia.cmake
.github/workflows/: acacia-cmake.yml
cmake-modules/: FindFilesystem.cmake
generator-source/: cmd_generate.cpp  cmd_generate.h  cmd_meta.cpp  cmd_meta.h  fs.h  logging.h  main.cpp  platform.h  scan_file.cpp  scan_file.h  scan_suite.cpp  scan_suite.h  typedefs.h  utils.cpp  utils.h
source/: acacia.cpp  acacia.h  registry.cpp  registry.h
source/assertions/: assertions.h  boolean_assertions.cpp  boolean_assertions.h  compare_assertions.h  equality_assertions.h  manual_assertions.cpp  manual_assertions.h  output_assertions.cpp  output_assertions.h
source/dynamic/: acacia_default_main.cpp.in  acacia_main.cpp.in  acacia_run_tests.cpp.in  test_suite_header.h.in  test_suites.cpp.in
source/exceptions/: assertion_exception.cpp  assertion_exception.h  state_exception.cpp  state_exception.h
source/io/: stream_capture.cpp  stream_capture.h  teebuf.cpp  teebuf.h  teestream.cpp  teestream.h
source/registry/: registrator.cpp  registrator.h  registry.cpp  registry.h
source/report/: acacia_report.cpp  acacia_report.h  junit.cpp  junit.h  report.cpp  report.h
source/suite/: base.cpp  base.h
source/util/: json_serialization.cpp  json_serialization.h  test_suites.h
